--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsdom": "^21.1.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.15.11",
+    "@types/node-fetch": "^2.6.3",
+    "@types/pg": "^8.6.6",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "express": "^4.18.2",
+    "jsdom": "^21.1.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
+    "node-fetch": "^3.3.1",
+    "pg": "^8.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "uuid": "^9.0.0"
   }
 }
