--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsdom": "^21.1.1",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
+    "next-auth": "^4.22.0",
     "node-fetch": "^3.3.1",
     "pg": "^8.10.0",
     "react": "18.2.0",
