--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/pg": "^8.6.6",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@types/uuid": "^9.0.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -34,6 +35,7 @@
     "pg": "^8.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "typescript": "5.0.3",
     "uuid": "^9.0.0"
   }
