--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@types/react-slick": "^0.23.10",
+    "@types/slick-carousel": "^1.6.37",
     "@types/uuid": "^9.0.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.0.3",
     "uuid": "^9.0.0"
   }
