--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "crons": [{
     "path": "/api/cron/check-future-sales",
-    "schedule": "* */10 * * *"
+    "schedule": "0 10 * * *"
   }]
 }
