--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.15.1",
     "@types/bcrypt": "^5.0.0",
     "@types/classnames": "^2.3.1",
     "@types/cors": "^2.8.13",
@@ -47,5 +48,8 @@
     "swr": "^2.1.3",
     "typescript": "5.0.3",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.52.6"
   }
 }
