basic ui with the sale details appearing

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.15.1",
+    "@googlemaps/markerclusterer": "^2.0.15",
     "@types/bcrypt": "^5.0.0",
     "@types/classnames": "^2.3.1",
     "@types/cors": "^2.8.13",
